# noema

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
crates/noema-cli/: Cargo.toml
crates/noema-cli/src/: main.rs
crates/noema-core/: Cargo.toml
crates/noema-core/src/: app_data.rs  chunks.rs  config.rs  index.rs  lib.rs  memory.rs  notes.rs  ollama.rs  persisted_index.rs  store.rs  watcher.rs
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
