[package]
name = "noema-cli"
version = "0.1.0"
edition = "2021"
description = "CLI entry point for the Noema backend (for dev and testing)."

[[bin]]
name = "noema"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
noema-core = { path = "../noema-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
