[package]
name = "noema-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for Noema desktop: indexing, embeddings, and LLM (Ollama)."

[dependencies]
directories = "5"
notify-debouncer-mini = "0.7"
ollama-rs = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
url = "2"
walkdir = "2"
